refactor de los servicios completados