@@ -3,30 +3,23 @@ package evovital.uniquindio.edu.co.servicios.implementaciones;
 import evovital.uniquindio.edu.co.domain.HorarioAtencion;
 import evovital.uniquindio.edu.co.domain.Medico;
 import evovital.uniquindio.edu.co.domain.Mensaje;
-import evovital.uniquindio.edu.co.domain.Pqrs;
 import evovital.uniquindio.edu.co.dto.consulta.ConsultaDTOAdmin;
-import evovital.uniquindio.edu.co.dto.horario.HorarioDTOActualizar;
-import evovital.uniquindio.edu.co.dto.horario.HorarioDTOCrear;
+import evovital.uniquindio.edu.co.dto.horario.HorarioDTO;
 import evovital.uniquindio.edu.co.dto.medico.InfoMedicoDTO;
-import evovital.uniquindio.edu.co.dto.medico.MedicoDTOActualizar;
+import evovital.uniquindio.edu.co.dto.medico.MedicoDTO;
 import evovital.uniquindio.edu.co.dto.medico.MedicoDTOAdmin;
-import evovital.uniquindio.edu.co.dto.medico.MedicoDTOCrear;
 import evovital.uniquindio.edu.co.dto.mensaje.MensajeDTOUsuario;
+import evovital.uniquindio.edu.co.dto.paciente.InfoPacienteDTO;
+import evovital.uniquindio.edu.co.dto.paciente.PacienteDTO;
 import evovital.uniquindio.edu.co.dto.pqrs.InfoPQRSDTO;
 import evovital.uniquindio.edu.co.dto.pqrs.PQRSDTOAdmin;
 import evovital.uniquindio.edu.co.repositories.*;
 import evovital.uniquindio.edu.co.servicios.especificaciones.AdministradorService;
-import evovital.uniquindio.edu.co.servicios.especificaciones.ImagenesService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
 
-import java.time.DayOfWeek;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -41,8 +34,7 @@ public class AdministradorServiceImpl implements AdministradorService {
     private final UsuarioRepository usuarioRepository;
     private final HorarioAtencionRepository horarioAtencionRepository;
     private final ConsultaRepository consultaRepository;
-
-    private final ImagenesService imagenesService;
+    private final PacienteRepository pacienteRepository;
 
     /**
      * Crea un medico en la base de datos con la informacion necesaria y devuelve el id del medico que se acabo de crear
@@ -51,13 +43,19 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @throws Exception
      */
     @Override
-    public Long crearMedico(MedicoDTOCrear medico) throws Exception {
+    public Long crearMedico(MedicoDTO medico) throws Exception {
 
-        medicoRepository.findByCedulaOrEmail(medico.cedula(), medico.email()).ifPresent(m -> {
-            throw new RuntimeException("Ya existe un medico con esa cedula o ese email");
-        });
+        usuarioRepository.findByCedula(medico.cedula()).ifPresent(
+                usuario -> new RuntimeException("ya existe un usuario con esta cedula")
+        );
 
-        Medico medicoAux = medicoDTOCrearToMedico(medico);
+        usuarioRepository.findByEmail(medico.email()).ifPresent(
+                usuario -> new RuntimeException("ya existe un usuario con ese email")
+        );
+
+        Medico medicoAux = medico.toEntity();
+        medicoAux.setEstaActivo(true);
+        medicoAux.setEspecialidad( especialidadRepository.findById(medico.idEspecialidad()).orElseThrow( () -> new RuntimeException("no existe la especialidad solicitada") ));
         medicoAux.setPassword(new BCryptPasswordEncoder().encode(medico.password()));
 
         Medico medicoRegistrado = medicoRepository.save(medicoAux);
@@ -78,24 +76,27 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @throws Exception
      */
     @Override
-    public Long actualizarMedico(MedicoDTOActualizar medico) throws Exception {
+    public Long actualizarMedico(MedicoDTO medico) throws Exception {
 
-        Medico medicoEncontrado = medicoRepository.findById(medico.id()).orElseThrow(() -> new Exception("No se encontró el medico que se quiere actualizar"));
+        Medico medicoEncontrado = medicoRepository.findByIdAndEstaActivoTrue(medico.id()).orElseThrow(
+                () -> new Exception("No se encontró el medico que se quiere actualizar")
+        );
 
         if (!medicoEncontrado.getCedula().equals(medico.cedula()))
-            medicoRepository.findByCedula(medico.cedula()).ifPresent(m -> {
+            usuarioRepository.findByCedula(medico.cedula()).ifPresent(m -> {
                 throw new RuntimeException("Ya existe un medico con esa cedula");
             });
 
         if (!medicoEncontrado.getEmail().equals(medico.email()))
-            medicoRepository.findByEmail(medico.email()).ifPresent(m -> {
+            usuarioRepository.findByEmail(medico.email()).ifPresent(m -> {
                 throw new RuntimeException("Ya existe un medico con ese email");
             });
 
-        medicoEncontrado = medicoDTOActualizarToMedico(medico);
-        medicoEncontrado.setPassword(new BCryptPasswordEncoder().encode(medicoEncontrado.getPassword()));
-
-        Medico medicoActualizado = medicoRepository.save(medicoEncontrado);
+        Medico medicoAux = medico.toEntity();
+        medicoAux.setEspecialidad( especialidadRepository.findById(medico.idEspecialidad()).orElseThrow( () -> new RuntimeException("no existe la especialidad solicitada") ) );
+        medicoAux.setPassword( medicoEncontrado.getPassword() );
+        medicoAux.setEstaActivo( true );
+        Medico medicoActualizado = medicoRepository.save(medicoAux);
 
         if (!medico.horarios().isEmpty())
             medico.horarios().forEach(
@@ -111,13 +112,14 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @return
      * @throws Exception
      */
+    @Transactional
     @Override
-    public MedicoDTOCrear eliminarMedico(Long codigo) throws Exception {
+    public MedicoDTO eliminarMedico(Long codigo) throws Exception {
 
         Medico medico = medicoRepository.findById(codigo).orElseThrow(() -> new Exception("No se encontró el medico que se quiere eliminar"));
         medico.setEstaActivo(false);
 
-        return medicoToMedicoDTOCrear(medicoRepository.save(medico));
+        return new MedicoDTO(medicoRepository.save(medico));
     }
 
     /**
@@ -128,9 +130,9 @@ public class AdministradorServiceImpl implements AdministradorService {
     @Override
     public List<MedicoDTOAdmin> listarMedicos() throws Exception {
 
-        if (medicoRepository.count() == 0) throw new Exception("No hay medicos para listar");
+        if (medicoRepository.findAll().stream().count() == 0) throw new Exception("No hay medicos para listar");
 
-        return medicoRepository.findAllByEstaActivoTrue().stream().map(this::medicoToMedicoDTOAdmin).collect(Collectors.toList());
+        return medicoRepository.findAll().stream().map(MedicoDTOAdmin::new).toList();
     }
 
     /**
@@ -142,9 +144,9 @@ public class AdministradorServiceImpl implements AdministradorService {
     @Transactional
     @Override
     public InfoMedicoDTO obtenerMedico(Long codigo) throws Exception {
-        return medicoToInfoMedicoDTO(
-                medicoRepository.findById(codigo).orElseThrow(() -> new Exception("No se encontró el medico que se quiere obtener"))
-        );
+        return new InfoMedicoDTO( medicoRepository.findById(codigo).orElseThrow(
+                () -> new RuntimeException("No se encuentra el medico que se quiere obtener")
+        ) );
     }
 
     /**
@@ -155,25 +157,26 @@ public class AdministradorServiceImpl implements AdministradorService {
     @Override
     public List<PQRSDTOAdmin> listarPQRS() throws Exception {
 
-        if (pqrsRepository.count() == 0) throw new Exception("No hay PQRS para listar");
 
-        return pqrsRepository.findAllByEstadoPqrs_Estado("En proceso").stream().map(this::pqrsToPQRSDTOAdmin).collect(Collectors.toList());
+        if (pqrsRepository.findAll().stream().count() == 0) throw new Exception("No hay PQRS para listar");
+
+        return pqrsRepository.findAll().stream().map(PQRSDTOAdmin::new).collect(Collectors.toList());
     }
 
     /**
-     * Responde una PQRS y devuelve el mensaje que se acaba de responder
+     * Responde una PQRS y devuelve el id del mensaje que se acaba de responder
      * @param mensajeUsuario
      * @return
      * @throws Exception
      */
     @Override
-    public String responderPQRS(MensajeDTOUsuario mensajeUsuario) throws Exception {
+    public Long responderPQRS(MensajeDTOUsuario mensajeUsuario) throws Exception {
 
-        Mensaje mensaje = mensajeDTOToMensaje(mensajeUsuario);
-        mensajeRepository.save(mensaje);
+        Mensaje mensaje = mensajeUsuario.toEntity();
+        mensaje.setUsuario(usuarioRepository.findById(mensajeUsuario.idUsuario()).orElseThrow(() -> new RuntimeException("No se encontró el usuario")));
+        mensaje.setPqrs(pqrsRepository.findById(mensajeUsuario.idPqrs()).orElseThrow(() -> new RuntimeException("No se encontró el pqrs")));
 
-        return mensaje.getContenido();
-
+        return mensajeRepository.save(mensaje).getId();
     }
 
     /**
@@ -198,7 +201,7 @@ public class AdministradorServiceImpl implements AdministradorService {
 
         if (consultaRepository.count() == 0) throw new Exception("No hay consultas para listar");
 
-        return consultaRepository.findAll().stream().map(consulta -> new ConsultaDTOAdmin(consulta)).toList();
+        return consultaRepository.findAll().stream().map(ConsultaDTOAdmin::new).toList();
     }
 
     /**
@@ -208,9 +211,9 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @return el id del horario que se acaba de crear
      */
     @Override
-    public Long crearHorario(Long idMedico, HorarioDTOCrear horario) {
+    public Long crearHorario(Long idMedico, HorarioDTO horario) {
 
-        HorarioAtencion horarioAtencion = horarioDTOToHorarioAtencion(horario);
+        HorarioAtencion horarioAtencion = horario.toEntity();
         horarioAtencion.setMedico(medicoRepository.findById(idMedico).orElseThrow(() -> new RuntimeException("No se encontro el medico")));
 
         HorarioAtencion horarioAtencionCreado = horarioAtencionRepository.save(horarioAtencion);
@@ -224,9 +227,9 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @return el id del horario que se acaba de actualizar
      */
     @Override
-    public Long actualizarHorario(Long idMedico, HorarioDTOActualizar horario) {
+    public Long actualizarHorario(Long idMedico, HorarioDTO horario) {
 
-        HorarioAtencion horarioAtencion = horarioDTOActualizarToHorarioAtencion(horario);
+        HorarioAtencion horarioAtencion = horario.toEntity();
         horarioAtencion.setMedico(medicoRepository.findById(idMedico).orElseThrow(() -> new RuntimeException("No se encontro el medico")));
 
         HorarioAtencion horarioAtencionActualizado = horarioAtencionRepository.save(horarioAtencion);
@@ -234,122 +237,23 @@ public class AdministradorServiceImpl implements AdministradorService {
 
     }
 
-    private Medico medicoDTOCrearToMedico(MedicoDTOCrear medico) throws Exception {
-
-        return Medico.builder()
-                .estaActivo(true)
-                .cedula(medico.cedula())
-                .nombre(medico.nombre())
-                .email(medico.email())
-                .ciudadResidencia(medico.ciudadResidencia())
-                .telefono(medico.telefono())
-                // TODO: .urlFotoPersonal(imagenesService.subirImagen())
-                .especialidad(especialidadRepository.findById(medico.idEspecialidad()).orElseThrow(() -> new Exception("No se encontro la especialidad")))
-                .build();
+    /**
+     * Lista todos los pacientes que estan en la base de datos
+     * @return
+     */
+    @Override
+    public List<InfoPacienteDTO> listarPacientes() {
+        return pacienteRepository.findAll().stream().map(InfoPacienteDTO::new).toList();
     }
 
-    private Medico medicoDTOActualizarToMedico(MedicoDTOActualizar medico) throws Exception {
-
-        return Medico.builder()
-                .id(medico.id())
-                .estaActivo(true)
-                .cedula(medico.cedula())
-                .nombre(medico.nombre())
-                .email(medico.email())
-                .password(medico.password())
-                .ciudadResidencia(medico.ciudadResidencia())
-                .telefono(medico.telefono())
-                //TODO: .urlFotoPersonal(imagenesService.subirImagen())
-                .especialidad(especialidadRepository.findById(medico.idEspecialidad()).orElseThrow(() -> new Exception("No se encontro la especialidad")))
-                .build();
+    /**
+     * Obtiene la informacion de un paciente en especifico
+     * @param idPaciente
+     * @return
+     */
+    @Override
+    public PacienteDTO obtenerDetallePaciente(Long idPaciente) {
+        return pacienteRepository.findById(idPaciente).map(PacienteDTO::new).orElseThrow(() -> new RuntimeException("No se encontro el paciente"));
     }
 
-    private MedicoDTOCrear medicoToMedicoDTOCrear(Medico medico) throws Exception {
-
-        return new MedicoDTOCrear(
-                medico.getCedula(),
-                medico.getNombre(),
-                medico.getEmail(),
-                medico.getPassword(),
-                medico.getCiudadResidencia(),
-                medico.getTelefono(),
-                medico.getUrlFotoPersonal(),
-                medico.getEspecialidad().getId(),
-                medico.getHorarios().stream().map(this::horarioAtencionToHorarioDTOCrear).collect(Collectors.toList())
-        );
-    }
-
-    private HorarioAtencion horarioDTOActualizarToHorarioAtencion(HorarioDTOActualizar horario) {
-        return HorarioAtencion.builder()
-                        .id(horario.id())
-                        .dia(DayOfWeek.of(horario.dia()))
-                        .inicio(LocalTime.parse("%s:00".formatted(horario.horaInicio())))
-                        .fin(LocalTime.parse("%s:00".formatted(horario.horaSalida())))
-                        .build();
-    }
-
-    private HorarioDTOCrear horarioAtencionToHorarioDTOCrear(HorarioAtencion horario) {
-        return new HorarioDTOCrear(
-                (byte) horario.getDia().getValue(),
-                horario.getInicio().toString(),
-                horario.getFin().toString()
-        );
-    }
-
-    private HorarioDTOActualizar horarioAtencionToHorarioDTOActualizar(HorarioAtencion horario) {
-        return new HorarioDTOActualizar(
-                horario.getId(),
-                (byte) horario.getDia().getValue(),
-                horario.getInicio().toString(),
-                horario.getFin().toString()
-        );
-    }
-
-    private HorarioAtencion horarioDTOToHorarioAtencion(HorarioDTOCrear horario) {
-        return HorarioAtencion.builder()
-                        .dia(DayOfWeek.of(horario.dia()))
-                        .inicio(LocalTime.parse("%s:00".formatted(horario.horaInicio())))
-                        .fin(LocalTime.parse("%s:00".formatted(horario.horaSalida())))
-                        .build();
-    }
-
-    private InfoMedicoDTO medicoToInfoMedicoDTO(Medico medico) {
-        return new InfoMedicoDTO(
-                medico.getId(),
-                medico.getNombre(),
-                medico.getCedula(),
-                medico.getCiudadResidencia(),
-                medico.getEspecialidad().getNombre(),
-                medico.getTelefono(),
-                medico.getEmail(),
-                medico.getHorarios().stream().map(this::horarioAtencionToHorarioDTOActualizar).collect(Collectors.toList())
-        );
-    }
-
-    private MedicoDTOAdmin medicoToMedicoDTOAdmin(Medico medico) {
-        return new MedicoDTOAdmin(
-                medico.getId(),
-                medico.getNombre(),
-                medico.getUrlFotoPersonal(),
-                medico.getEspecialidad().getNombre()
-        );
-    }
-
-    private PQRSDTOAdmin pqrsToPQRSDTOAdmin(Pqrs pqrs) {
-        return new PQRSDTOAdmin(
-                pqrs.getId(),
-                pqrs.getEstadoPqrs().getEstado(),
-                pqrs.getFechaCreacion(),
-                pqrs.getConsulta().getPaciente().getNombre()
-        );
-    }
-
-    private Mensaje mensajeDTOToMensaje(MensajeDTOUsuario mensaje) {
-        return Mensaje.builder()
-                .contenido(mensaje.mensaje())
-                .horaYFecha(LocalDateTime.now())
-                .pqrs(pqrsRepository.findById(mensaje.idPqrs()).orElseThrow(() -> new RuntimeException("No se encontro la PQRS")))
-                .usuario(usuarioRepository.findById(mensaje.idUsuario()).orElseThrow(() -> new RuntimeException("No se encontro el usuario")))
-                .build();
-    }
 }
